# api_template

./: .gitignore  README.md  docker-compose.yaml
api/: .dockerignore  go.mod  pyproject.toml
api/api/: __init__.py
api/api/config/: __init__.py
api/api/services/: helloworld.py
api/api/views/: __init__.py
backend/: .env.dev  CMakeLists.txt  CMakePresets.json  Cargo.toml  config.json  dev_dockerfile  dockerfile  dockerfile.prod  go.mod  go.sum  main.cpp  main.go  model.json  prod_dockerfile  pyproject.toml  run.py  vcpkg.json
backend/api/: __init__.py
backend/api/config/: __init__.py
backend/api/database/: models.py
backend/api/schemas/: response.py
backend/api/views/: __init__.py  helloworld.py
backend/config/: config.go
backend/database/: database.go  models.go
backend/include/database/: Examples.h  Examples_legacy.cc  example.hpp
backend/include/schemas/: example.hpp  response.hpp
backend/include/views/: example.hpp  hello.hpp
backend/middleware/: jwt.go
backend/schemas/: example.go  response.go  shemas.go
backend/services/: example.go  hello.go
backend/src/: main.rs
backend/src/config/: config.rs
backend/src/database/: connection.rs  examples.rs  migrations.rs  mod.rs  models.rs
backend/src/schemas/: example.rs  mod.rs  response.rs
backend/src/services/: example.rs  hello.rs
backend/src/views/: example.rs  hello.rs  mod.rs
backend/views/: example.go  hello.go
mysql/: .env  .env.dev  dockerfile  init.sql
nginx/: dockerfile
redis/: .env  .env.dev
