[package]
name = "backend_template"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4.4.0"
# chrono = "0.4.31"
sea-orm = { version="0.12", features = ["macros", "sqlx-mysql", "sqlx-postgres", "sqlx-sqlite"]}
serde = {version="1.0.193", features = ["derive"]}
serde_json = "1.0.108"
